--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -91,7 +91,7 @@
 
   .mobile_menu_icon {
     margin-left: auto;
-    padding-right: 10%;
+    padding-right: 1rem;
     padding-top: 10px;
     display: block;
     background-color: #1B2731;
